<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>republisher_node</name>
  <version>0.3.0</version>
  <description>Package containing an example Rust node.</description>
  <maintainer email="nnmmgit@gmail.com">Nikolai Morin</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
